# SimpleCRM

./: .gitignore  README.md  import_email.py  main.py  pyproject.toml
calendario/: models.py  urls.py  views.py
calendario/migrations/: 0001_initial.py  0002_alter_tarea_fecha_fin_alter_tarea_fecha_inicio.py  0003_rename_empresa_tarea_contacto.py  0004_tarea_titulo_alter_tarea_descripcion.py  0005_tarea_estado.py
calendario/templates/: calendario.jinja2
calendario/templates/partials/: tarea_detalles.jinja2
configuracion/: tasks.py  urls.py  views.py
configuracion/templates/: settings.jinja2
configuracion/templates/partials/: import_status.jinja2
contactos/: models.py  urls.py  views.py
contactos/migrations/: 0001_initial.py  0002_rename_cliente_contacto.py
contactos/templates/: list_contacts.jinja2  list_emails.jinja2
contactos/templates/partials/: contacto_detalles.jinja2  timeline.jinja2
empresas/: models.py  urls.py  views.py
empresas/migrations/: 0001_initial.py  0002_empresa_fecha_creacion.py  0003_contribuyente_alter_empresa_ruc.py
empresas/templates/: index.jinja2
empresas/templates/partials/: empresa_detalles.jinja2
simplecrm/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/: base.html
